change jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,20 +1,1 @@
-JENKINS_HOST=jenkins.example.com
-JENKINS_PORT=443
-JENKINS_URL=https://${JENKINS_HOST}:${JENKINS_PORT}
-KEYSTOREFILE=myKeystore
-KEYSTOREPASS=changeme
-
-# get the SSL certificate
-openssl s_client -connect ${JENKINS_HOST}:${JENKINS_PORT} </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > ${JENKINS_HOST}.cer
-# create a keystore and import certificate
-keytool -import -noprompt -trustcacerts -alias ${JENKINS_HOST} -file ${JENKINS_HOST}.cer -keystore ${KEYSTOREFILE} -storepass ${KEYSTOREPASS}
-# verify that the certificate is listed
-keytool -list -v -keystore ${KEYSTOREFILE} -storepass ${KEYSTOREPASS}
-# get jenkins-cli
-wget --no-check-certificate ${JENKINS_URL}/jnlpJars/jenkins-cli.jar
-# test access
-alias jcli="java -Djavax.net.ssl.trustStore=${KEYSTOREFILE} -Djavax.net.ssl.trustStorePassword=${KEYSTOREPASS} -jar jenkins-cli.jar -s ${JENKINS_URL,,}"
-jcli help
-# ... or set this in your ~/.bashrc
-export JAVA_TOOL_OPTIONS="-Djavax.net.ssl.trustStore=${KEYSTOREFILE} -Djavax.net.ssl.trustStorePassword=${KEYSTOREPASS}"
-java -jar jenkins-cli.jar -s ${JENKINS_URL} help
+echo "sam"
